# socks5

./: CHANGELOG.md  LICENSE  socks5.cabal
Network/SOCKS5/: Client.hs  Internal.hs  Server.hs  Types.hs
example/: Main.hs
server/: Main.hs
test/: Spec.hs
tests/: Spec.hs  cert.pem  key.pem
