cabal-version: 3.0
name: socks5
version: 0.1.0.0
synopsis: SOCKS5 protocol library, supporting both client and server functionalities.
description: This package provides an implementation of the SOCKS5 protocol (RFC 1928). It contains modules for creating SOCKS5 clients and servers. The library offers functions to add SOCKS5 proxy support to Haskell applications. A server executable is included to demonstrate the library's usage.
license: BSD-3-Clause
license-file: LICENSE
author: Shi Rao
maintainer: github@homovetus.com
-- copyright:
category: Network
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options:
    -Wall
    -threaded

library
  import: warnings
  exposed-modules:
    Network.SOCKS5.Client
    Network.SOCKS5.Internal
    Network.SOCKS5.Server

  build-depends:
    async ^>=2.2,
    base ^>=4.18,
    binary ^>=0.8,
    bytestring ^>=0.12,
    iproute ^>=1.7,
    mtl ^>=2.3,
    network ^>=3.2,
    network-run ^>=0.4,
    text ^>=2.1,
    tls ^>=2.1,

  default-language: GHC2021

executable server
  import: warnings
  main-is: Main.hs
  build-depends:
    base ^>=4.18,
    data-default ^>=0.8,
    optparse-applicative ^>=0.19,
    socks5,
    text ^>=2.1,
    tls ^>=2.1,

  hs-source-dirs: server
  default-language: GHC2021

test-suite socks5-test
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    async ^>=2.2,
    base ^>=4.18,
    binary ^>=0.8,
    bytestring ^>=0.12,
    hspec ^>=2.11,
    mtl ^>=2.3,
    network ^>=3.2,
    network-run ^>=0.4,
    socks5,

  default-language: GHC2021
