cabal-version: 3.0
name: socks5
version: 0.5.0.0
synopsis: A SOCKS5 (RFC 1928) implementation
description:
  This package provides a library with simple functions to create SOCKS5 clients and servers, along with a standalone server executable.
  .
  It supports all standard SOCKS5 commands (CONNECT, BIND, and UDP ASSOCIATE), Username/Password authentication (RFC 1929), and TLS-secured connections.

license: BSD-3-Clause
license-file: LICENSE
author: Shi Rao
maintainer: github@homovetus.com
category: Network
build-type: Simple
extra-doc-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/homovetus/socks5

common warnings
  ghc-options:
    -Wall
    -threaded

library
  import: warnings
  exposed-modules:
    Network.SOCKS5.Client
    Network.SOCKS5.Internal
    Network.SOCKS5.Server
    Network.SOCKS5.Types

  build-depends:
    async ^>=2.2,
    base ^>=4.18,
    binary ^>=0.8,
    bytestring ^>=0.12,
    iproute ^>=1.7,
    mtl ^>=2.3,
    network ^>=3.2,
    network-run ^>=0.4,
    text ^>=2.1,
    tls ^>=2.1,

  default-language: GHC2021

executable socks5
  import: warnings
  main-is: Main.hs
  build-depends:
    base ^>=4.18,
    data-default ^>=0.8,
    optparse-applicative ^>=0.19,
    socks5,
    text ^>=2.1,
    tls ^>=2.1,

  hs-source-dirs: server
  default-language: GHC2021

executable socks5-example
  import: warnings
  main-is: Main.hs
  build-depends:
    base ^>=4.18,
    bytestring ^>=0.12,
    network ^>=3.2,
    socks5,

  hs-source-dirs: example
  default-language: Haskell2010

test-suite socks5-test
  import: warnings
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends:
    async ^>=2.2,
    base ^>=4.18,
    binary ^>=0.8,
    bytestring ^>=0.12,
    hspec ^>=2.11,
    mtl ^>=2.3,
    network ^>=3.2,
    network-run ^>=0.4,
    socks5,

  default-language: GHC2021
